

plugins {
    id 'java'
    id 'idea'
    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
    id 'org.jetbrains.kotlinx.kover' version '0.9.9'
    id 'org.jetbrains.kotlin.plugin.serialization' version '2.2.21'
    id 'org.openstreetmap.josm' version '0.8.2'
}

group 'org.openstreetmap.josm.plugins.dl.geaddresshelper'
version '12'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

dependencies {
//    implementation 'org.apache.commons:commons-text:1.15.0'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.2.21'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.11.0'
    implementation "com.charleskorn.kaml:kaml:0.104.0"
    implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
    implementation 'com.github.kittinunf.fuel:fuel-coroutines:2.3.1'
    implementation 'com.github.kittinunf.fuel:fuel-jackson:2.3.1'
    implementation 'junit:junit:4.13.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.22.2'
    implementation("com.fasterxml.jackson.core:jackson-annotations:2.22")
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.2'

//    packIntoJar 'org.apache.commons:commons-text:1.15.0'
    packIntoJar 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.11.0'
    packIntoJar 'org.jetbrains.kotlin:kotlin-stdlib:2.1.0'
    packIntoJar 'com.charleskorn.kaml:kaml:0.104.0'
    packIntoJar 'com.github.kittinunf.fuel:fuel:2.3.1'
    packIntoJar 'com.github.kittinunf.fuel:fuel-coroutines:2.3.1'
    packIntoJar 'com.github.kittinunf.fuel:fuel-jackson:2.3.1'

    testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.1.0'
    testImplementation("org.openstreetmap.josm:josm-unittest:") { changing = true }
    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.32.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'org.skyscreamer:jsonassert:1.5.0'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

jar {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
}

test {
    useJUnitPlatform()
}

sourceSets {
    test {
        resources {
            srcDirs = ["src/test/data"]
        }
    }
}

josm {
    pluginName = "georgian-address-helper"
    debugPort = 1729
    josmCompileVersion = 18902
    manifest {
        description = "Плагин JOSM для загрузки адресов из NAPR"
        mainClass = "org.openstreetmap.josm.plugins.dl.geaddresshelper.GeAddressHelperPlugin"
        minJosmVersion = 17919
        author = "Antisida"
        canLoadAtRuntime = true
        iconPath = "images/flag_georgia.svg"
    }

}

tasks.named('runJosm') {
    jvmArgs += [
            "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED",
            "-Dfile.encoding=UTF-8"
    ]
}
